--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
   "scripts": {
     "build": "rm -rf dist && webpack --mode production && cpx src/appsscript.json dist",
     "deploy": "npm run build && clasp push --force",
+    "lint": "eslint ./ --ext ts,tsx",
+    "lint:fix": "eslint ./ --ext ts,tsx --fix",
     "tsc": "tsc --noEmit"
   },
   "devDependencies": {
     "@types/google-apps-script": "1.0.22",
     "@types/node": "14.14.25",
+    "@typescript-eslint/eslint-plugin": "5.7.0",
+    "@typescript-eslint/parser": "5.7.0",
     "cpx": "1.5.0",
+    "eslint": "8.4.1",
     "gas-webpack-plugin": "1.2.2",
     "ts-loader": "8.0.15",
     "typescript": "4.1.3",
