--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "rm -rf dist && webpack --mode production && cpx src/appsscript.json dist",
     "deploy": "npm run build && clasp push --force",
+    "format": "prettier --write \"**/*.{js,jsx,json,ts,tsx,md,mdx,css,html,yml,yaml,scss,sass}\" --ignore-path .gitignore",
     "lint": "eslint ./ --ext ts,tsx",
     "lint:fix": "eslint ./ --ext ts,tsx --fix",
     "tsc": "tsc --noEmit"
@@ -19,6 +20,7 @@
     "cpx": "1.5.0",
     "eslint": "8.4.1",
     "gas-webpack-plugin": "1.2.2",
+    "prettier": "2.5.1",
     "ts-loader": "8.0.15",
     "typescript": "4.1.3",
     "webpack": "4.46.0",
